实现其他7项图表

--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -13,7 +13,7 @@
         <option value ="">选择数据库</option>
       </select>
       <select id="chart_selector" onchange="chartOnChange(this)">
-        <option value ="">选择图表类型</option>
+        <option value ="none">选择图表类型</option>
 		<option value ="welcome">观众入场折线图</option>
 		<option value ="popularity">人气变化折线图</option>
 		<option value ="followers">粉丝数变化折线图</option>
