--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -1,47 +1,49 @@
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>bili-live-monitor</title>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
-	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./chart.js"></script>
-  </head>
-  <body>
-    <div>
-      bili-live-monitor
-      <select id="database_selector" onchange="databaseOnChange(this)">
-        <option value ="">选择数据库</option>
-      </select>
-      <select id="chart_selector" onchange="chartOnChange(this)">
-        <option value ="none">选择图表类型</option>
-		<option value ="danmaku_sum">弹幕数量折线图（合计）</option>
-		<option value ="danmaku_rank">弹幕数量折线图（排行）</option>
-		<option value ="medal">粉丝勋章分布</option>
-		<option value ="medal_level">粉丝勋章等级分布</option>
-		<option value ="level">直播间等级分布</option>
-		<option value ="gifts">送礼数量折线图</option>
-		<option value ="followers">粉丝数变化折线图</option>
-		<option value ="welcome">观众入场折线图</option>
-		<option value ="popularity">人气变化折线图</option>
-		<option value ="superchat">醒目留言折线图</option>
-		<option value ="new_guards">购买舰长折线图</option>
-		<option value ="entry_effect">入场效果折线图</option>
-		<option value ="events">直播事件折线图</option>
-      </select>
-	  <select id="combination_selector" onchange="combinationOnChange(this)" disabled=true>
-        <option>数据源：未合并</option>
-		<option>数据源：已合并</option>
-      </select>
-	  <select id="source_selector" onchange="sourceOnChange(this)" disabled=true>
-        <option value ="danmaku">用户来源：弹幕</option>
-		<option value ="gifts">用户来源：礼物</option>
-		<option value ="welcome">用户来源：入场</option>
-		<option value ="superchat">用户来源：醒目留言</option>
-      </select>
-	  <label>时间粒度</label>
-	  <input id="width" type="range" min="1" max="150" value="45" onchange="onWidthChange()" oninput="onWidthInput()" />
-	  <label id="width_label">60秒</label>
-    </div>
-    <div id="main" style="width: 600px;height:400px;"></div>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>bili-live-monitor</title>
+		<script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
+		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="./chart.js"></script>
+	</head>
+	<body>
+		<div>
+			bili-live-monitor
+			<select id="database_selector" onchange="databaseOnChange(this)">
+			<option value ="">选择数据库</option>
+			</select>
+			<select id="chart_selector" onchange="chartOnChange(this)">
+			<option value ="none">选择图表类型</option>
+			<option value ="danmaku_sum">弹幕数量折线图（合计）</option>
+			<option value ="danmaku_rank">弹幕数量折线图（排行）</option>
+			<option value ="medal">粉丝勋章分布</option>
+			<option value ="medal_level">粉丝勋章等级分布</option>
+			<option value ="level">直播间等级分布</option>
+			<option value ="gifts">送礼数量折线图</option>
+			<option value ="followers">粉丝数变化折线图</option>
+			<option value ="welcome">观众入场折线图</option>
+			<option value ="popularity">人气变化折线图</option>
+			<option value ="superchat">醒目留言折线图</option>
+			<option value ="new_guards">购买舰长折线图</option>
+			<option value ="entry_effect">入场效果折线图</option>
+			<option value ="events">直播事件折线图</option>
+			</select>
+			<select id="combination_selector" onchange="combinationOnChange(this)" hidden="hidden">
+			<option>数据源：未合并</option>
+			<option>数据源：已合并</option>
+			</select>
+			<select id="source_selector" onchange="sourceOnChange(this)" hidden="hidden">
+			<option value ="danmaku">用户来源：弹幕</option>
+			<option value ="gifts">用户来源：礼物</option>
+			<option value ="welcome">用户来源：入场</option>
+			<option value ="superchat">用户来源：醒目留言</option>
+			</select>
+		</div>
+		<div id="div_width">
+			<label>时间粒度</label>
+			<input id="width" type="range" min="1" max="150" value="45" onchange="onWidthChange()" oninput="onWidthInput()" />
+			<label id="width_label">60秒</label>
+		</div>
+		<div id="main" style="width: 1600px;height:800px;"></div>
+	</body>
 </html>
