添加导出弹幕动态排行CSV功能

--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -17,6 +17,7 @@
 			<option value ="none">选择图表类型</option>
 			<option value ="danmaku_sum">弹幕数量折线图（合计）</option>
 			<option value ="danmaku_rank">弹幕数量折线图（排行）</option>
+			<option value ="danmaku_dynamic_rank">弹幕数量动态排行</option>
 			<option value ="medal">粉丝勋章分布</option>
 			<option value ="medal_level">粉丝勋章等级分布</option>
 			<option value ="level">直播间等级分布</option>
