--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -4,49 +4,58 @@
 		<title>bili-live-monitor可视化图表</title>
 		<script src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
 		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/css/mdui.min.css"/>
 		<script src="./chart.js"></script>
 		<script src="./csv.min.js"></script>
 	</head>
 	<body>
 		<div>
-			<b>bili-live-monitor可视化图表</b>
-			<select id="database_selector" onchange="databaseOnChange(this)">
+		    <div class="mdui-toolbar mdui-color-pink">
+		       <a href="javascript:;" class="mdui-btn mdui-btn-icon">
+               <i class="mdui-icon material-icons">menu</i>
+               </a>
+            <span class="mdui-typo-title"><b>bili-live-monitor可视化图表</b></span>
+            <a href="https://dl.imvup.cn" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">cloud_download</i></a>
+			</div>
+			<br>
+			<div class="mdui-container mdui-col-xs-[1-12]">
+			<select class="mdui-select" id="database_selector" onchange="databaseOnChange(this)">
 			<option value ="">选择数据库</option>
-			</select>
-			<select id="chart_selector" onchange="chartOnChange(this)">
-			<option value ="none">选择图表类型</option>
-			<option value ="danmaku_sum">弹幕数量折线图（合计）</option>
-			<option value ="danmaku_rank">弹幕数量折线图（排行）</option>
-			<option value ="danmaku_dynamic_rank">弹幕数量动态排行</option>
-			<option value ="medal">粉丝勋章分布</option>
-			<option value ="medal_level">粉丝勋章等级分布</option>
-			<option value ="level">直播间等级分布</option>
-			<option value ="gifts">送礼数量折线图</option>
-			<option value ="followers">粉丝数变化折线图</option>
-			<option value ="welcome">观众入场折线图</option>
-			<option value ="popularity">人气变化折线图</option>
-			<option value ="superchat">醒目留言折线图</option>
-			<option value ="new_guards">购买舰长折线图</option>
-			<option value ="entry_effect">入场效果折线图</option>
-			<option value ="events">直播事件折线图</option>
-			</select>
-			<select id="combination_selector" onchange="combinationOnChange(this)" hidden="hidden">
+			</select> &nbsp;
+			<select class="mdui-select" id="chart_selector" onchange="chartOnChange(this)" mdui-select="{position: 'bottom'}">
+			<option value ="none">  选择图表类型</option>
+			<option value ="danmaku_sum">  弹幕数量折线图（合计）</option>
+			<option value ="danmaku_rank">  弹幕数量折线图（排行）</option>
+			<option value ="danmaku_dynamic_rank">  弹幕数量动态排行</option>
+			<option value ="medal">  粉丝勋章分布</option>
+			<option value ="medal_level">  粉丝勋章等级分布</option>
+			<option value ="level">  直播间等级分布</option>
+			<option value ="gifts">  送礼数量折线图</option>
+			<option value ="followers">  粉丝数变化折线图</option>
+			<option value ="welcome">  观众入场折线图</option>
+			<option value ="popularity">  人气变化折线图</option>
+			<option value ="superchat">  醒目留言折线图</option>
+			<option value ="new_guards">  购买舰长折线图</option>
+			<option value ="entry_effect">  入场效果折线图</option>
+			<option value ="events">  直播事件折线图</option>
+			</select> &nbsp;
+			<select class="mdui-select" id="combination_selector" onchange="combinationOnChange(this)" hidden="hidden" mdui-select="{position: 'bottom'}">
 			<option>数据源：未合并</option>
 			<option>数据源：已合并</option>
-			</select>
-			<select id="source_selector" onchange="sourceOnChange(this)" hidden="hidden">
+			</select>&nbsp;
+			<select class="mdui-select" id="source_selector" onchange="sourceOnChange(this)" hidden="hidden" mdui-select="{position: 'bottom'}">
 			<option value ="danmaku">用户来源：弹幕</option>
 			<option value ="gifts">用户来源：礼物</option>
 			<option value ="welcome">用户来源：入场</option>
 			<option value ="superchat">用户来源：醒目留言</option>
-			</select>
-			<button id="export" onclick="exportOnClick()">导出CSV</button>
-		</div>
-		<div id="div_width">
-			<label>时间粒度</label>
+			</select> &nbsp;
+			<button class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme-accent" id="export" onclick="exportOnClick()">导出CSV</button> &nbsp;
+		    <label>时间粒度</label>
 			<input id="width" type="range" min="1" max="150" value="45" onchange="onWidthChange()" oninput="onWidthInput()" style="width:300px" />
 			<label id="width_label">60秒</label>
 		</div>
+		</div>
 		<div id="main" style="width: 100%; height:90%"></div>
+		<script src="https://cdn.jsdelivr.net/npm/mdui@1.0.2/dist/js/mdui.min.js"></script>
 	</body>
 </html>
